...
    val temperatureUnit = preferencesRepository.getTemperatureUnit.collectAsState(initial = "")
    if (openTemperatureDialog.value) {
        TemperatureUnitDialog(
            modifier = modifier,
            onDismissRequest = onDismissRequest,
            initialSelectedOption = temperatureUnit.value ?: "",
            optionNames = listOf("Fahrenheit", "Celsius"),
            onConfirmed = { selectedOption ->
                coroutineScope.launch {
                    preferencesRepository.saveTemperatureSetting(selectedOption)
                    openTemperatureDialog.value = false
                }
            }
...
    val windSpeedUnit = preferencesRepository.getWindspeedUnit.collectAsState(initial = "")
    if (openWindspeedDialog.value) {
        WindSpeedUnitDialog(
            modifier = modifier,
            onDismissRequest = { openWindspeedDialog.value = false },
            initialSelectedOption = windSpeedUnit.value ?: "",
            optionNames = listOf("MPH", "KPH"),
            onConfirmed = { selectedOption ->
                coroutineScope.launch {
                    preferencesRepository.saveWindspeedSetting(selectedOption)
                    openWindspeedDialog.value = false
                }
            }
...
    val measurementUnit = preferencesRepository.getMeasurementUnit.collectAsState(initial = "")
    if (openMeasurementDialog.value) {
        MeasurementUnitDialog(
            modifier = modifier,
            onDismissRequest = { openMeasurementDialog.value = false },
            initialSelectedOption = measurementUnit.value ?: "",
            optionNames = listOf("IN", "MM"),
            onConfirmed = { selectedOption ->
                coroutineScope.launch {
                    preferencesRepository.saveMeasurementSetting(selectedOption)
                    openMeasurementDialog.value = false
                }
            }
...
    }

    val clockFormat = preferencesRepository.getClockFormat.collectAsState(initial = "")
    if(openClockFormatDialog.value) {
        ClockFormatDialog(
            optionNames = listOf(
                Pair("12 hour", stringResource(R.string.twelve_hour_clock_format)),
                Pair("24 hour", stringResource(R.string.twenty_four_hour_clock_format)) ),
            initialSelectedOption = clockFormat.value ?: "",
            onDismissRequest = { openClockFormatDialog.value = false }
        ) { selectedOption ->
            coroutineScope.launch {
                preferencesRepository.saveClockFormatSetting(selectedOption)
                openClockFormatDialog.value = false
...
private fun prepareUnitSettings(): List<SettingsDrawerItem> {
    val itemsList = mutableListOf<SettingsDrawerItem>()

    itemsList.add(
        SettingsDrawerItem(
            image = painterResource(R.drawable.ic_temperature),
            label = "Temperature"
        )
    )
    itemsList.add(
        SettingsDrawerItem(
            image = painterResource(id = R.drawable.barometer_svgrepo_com),
            label = "Precipitation / Pressure",
            showUnreadBubble = false
        )
    )
    itemsList.add(
        SettingsDrawerItem(
            image = painterResource(id = R.drawable.ic_wind),
            label = "Wind",
            showUnreadBubble = false
        )
    )
    itemsList.add(
        SettingsDrawerItem(
            image = painterResource(id = R.drawable.ic_baseline_access_time_24),
            label = "Clock Format"
        )
    )
    itemsList.add(
        SettingsDrawerItem(
            image = painterResource(id = R.drawable.ic_baseline_calendar_month_24),
            label = "Date Format"
...
            }
        },
        confirmButton = {
            TextButton(onClick = {
                onConfirmed(selectedOption.value)
            }) {
                Text(text = "Ok")
            }
        },
        shape = RoundedCornerShape(size = 4.dp),
        modifier = modifier
    )

...
